[gd_scene load_steps=5 format=3 uid="uid://dgr3aowy3j8wt"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_lxcam"]
[ext_resource type="PackedScene" uid="uid://dtg43u0k6scfk" path="res://Scenes/UI/button.tscn" id="1_qu3wq"]
[ext_resource type="PackedScene" uid="uid://bjgvbdws70i6p" path="res://Scenes/UI/mask_virtual_joystick.tscn" id="2_hmm13"]
[ext_resource type="Texture2D" uid="uid://r6yh6e7vhheb" path="res://Assets/Rocky Roads/MyAssets/Transition.png" id="4_uvejc"]

[node name="UI" type="Control" groups=["UI"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lxcam")

[node name="TouchControls" type="CanvasLayer" parent="."]
visible = false

[node name="TimerControls" type="Timer" parent="TouchControls"]
wait_time = 0.5
one_shot = true

[node name="Mask Virtual Joystick" parent="TouchControls" instance=ExtResource("2_hmm13")]
anchor_left = 0.0
anchor_top = 0.741
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 181.0
offset_top = -0.16806
offset_right = -395.0
offset_bottom = -167.984
grow_horizontal = 2

[node name="Button dash" parent="TouchControls" groups=["Scaleable_node"] instance=ExtResource("1_qu3wq")]
layout_direction = 1
anchors_preset = -1
anchor_left = 0.897
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.343994
offset_top = 0.199982
offset_right = -119.0
offset_bottom = -259.0
grow_horizontal = 2
grow_vertical = 2
Input_received = "ui_dash"

[node name="Button jump" parent="TouchControls" groups=["Scaleable_node"] instance=ExtResource("1_qu3wq")]
layout_direction = 1
anchors_preset = -1
anchor_left = 0.72
anchor_top = 0.801
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.559937
offset_top = -0.0480347
offset_right = -322.0
offset_bottom = -129.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="TransitionScene" type="CanvasLayer" parent="."]

[node name="ReferencePointB" type="Control" parent="TransitionScene"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ReferencePointA" type="Control" parent="TransitionScene"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -50.0
offset_bottom = -50.0
grow_horizontal = 2

[node name="TransitionTexture" type="Control" parent="TransitionScene" groups=["Scaleable_node"]]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Sprite2D" type="Sprite2D" parent="TransitionScene/TransitionTexture"]
position = Vector2(0, -195)
scale = Vector2(1.41101, 1)
texture = ExtResource("4_uvejc")

[node name="Sprite2D2" type="Sprite2D" parent="TransitionScene/TransitionTexture"]
position = Vector2(-1174, -195)
scale = Vector2(1.41101, 1)
texture = ExtResource("4_uvejc")

[node name="Sprite2D3" type="Sprite2D" parent="TransitionScene/TransitionTexture"]
position = Vector2(1174, -195)
scale = Vector2(1.41101, 1)
texture = ExtResource("4_uvejc")

[node name="Sprite2D4" type="Sprite2D" parent="TransitionScene/TransitionTexture"]
position = Vector2(-7, -629)
scale = Vector2(4.16979, 1)
texture = ExtResource("4_uvejc")

[connection signal="timeout" from="TouchControls/TimerControls" to="." method="_on_timer_controls_timeout"]
